--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "d3-fetch": "^3.0.1",
+    "d3-geo": "^3.1.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.9.2",
@@ -61,6 +63,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
+    "topojson-client": "^3.1.0",
     "url": "latest",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
@@ -71,6 +74,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.176.0",
+    "@types/topojson-specification": "^1.0.5",
     "postcss": "^8",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.8",
