--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,8 +52,10 @@
     "framer-motion": "^12.9.2",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "motion": "^12.9.2",
     "next": "15.2.4",
     "next-themes": "latest",
+    "nodemailer": "^6.10.1",
     "path": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
@@ -62,7 +67,8 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "latest",
+    "three": "^0.176.0",
+    "three-globe": "^2.42.4",
     "topojson-client": "^3.1.0",
     "url": "latest",
     "vaul": "^0.9.6",
